GNOME Bugzilla – Bug 755294
GeditCloseConfirmationDialog is broken
Last modified: 2015-09-24 10:01:14 UTC
Created attachment 311692 [details] Screenshot, when closing the window with an unsaved file. Looks like the the GeditCloseConfirmationDialog is broken in 3.17.92… sys:1: Warning: g_param_spec_internal: assertion '!(flags & G_PARAM_STATIC_NAME) || is_canonical (name)' failed sys:1: Warning: g_object_class_install_properties: assertion 'pspec != NULL' failed sys:1: Warning: g_object_new_valist: object class 'GeditCloseConfirmationDialog' has no property named 'unsaved_documents'
Created attachment 311694 [details] [review] close-confirmation-dialog: fix property name fix non-valid property name with an underscore.
Uhm, weird, I thought the policy of glib was to accept _ even if - is the preferred form. Anyway the patch looks good: please ask permission to the release team for the code freeze break (either on irc or by mail) and let's get this in 3.18.9
(obviously I meant 3.18.0)
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version. commited as 466722b
*** Bug 755420 has been marked as a duplicate of this bug. ***
*** Bug 755519 has been marked as a duplicate of this bug. ***