close-confirmation-dialog: fix property name

fix non-valid property name with an underscore.

https://bugzilla.gnome.org/show_bug.cgi?id=755294